--- a/css/landing.css
+++ b/css/landing.css
@@ -1,6 +1,6 @@
 body {
  margin: 0;
- background: url(../img/background.jpg);
+ background: url(../img/landingbkg.jpg);
  background-size: 1440px 800px;
  background-repeat:no-repeat;
  display: compact;
